доработка слайдера и верстка подвала

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="container"> 
         <div class="row">
           <div class="section_header text-center">
-            <h2>Решения для телефонии</h2>
+            <h3>Решения для телефонии</h3>
           </div>
         </div>
         <div class="row text-center">
@@ -132,7 +132,7 @@
       <div class="container"> 
         <div class="row">
           <div class="section_header text-center">
-            <h2>Решения для беспроводной сети <span>ubiquiti</span></h2>
+            <h3>Решения для беспроводной сети <span>ubiquiti</span></h3>
           </div>
         </div>
         <div class="row text-center">
@@ -180,30 +180,186 @@
       <div class="container">
         <div class="row">
           <div class="section_header text-center">
-            <h2>Услуги доступа в интернет и телефонная связь на объекрах</h2>
+            <h3>Услуги доступа и интернет и телефонная связь</h3>
           </div>
-          <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-              <div class="slider">
-                <div class="fotorama"
-                 data-nav="thumbs"
-                 data-width="800"
-                 data-height="500"
-                 data-transition="slide">
-                  <img src="img/object/1.jpg" alt="XL" class="slide_xl">
-                  <img src="img/object/2.jpg" alt="Suvar Plaza">
-                  <img src="img/object/3.jpg" alt="City Cenrt">
-                  <img src="img/object/4.jpg" alt="Market">
-                  <img src="img/object/5.jpg" alt="Riviera Hotel">
-                  <img src="img/object/6.jpg" alt="Riviera RK">
-                  <img src="img/object/7.jpg" alt="Interterminal">
+        </div>
+        <div class="row">
+          <div class="wrap_slider">
+            <!-- Карусель -->
+            <div id="myCarousel" class="carousel slide" data-interval="300000" data-ride="carousel">
+              <!-- Индикаторы для карусели -->
+              <ol class="carousel-indicators">
+                <!-- Перейти к 0 слайду карусели с помощью соответствующего индекса data-slide-to="0" -->
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <!-- Перейти к 1 слайду карусели с помощью соответствующего индекса data-slide-to="1" -->
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <!-- Перейти к 2 слайду карусели с помощью соответствующего индекса data-slide-to="2" -->
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
+                <li data-target="#myCarousel" data-slide-to="5"></li>
+                <li data-target="#myCarousel" data-slide-to="6"></li>
+              </ol>   
+              <!-- Слайды карусели -->
+              <div class="carousel-inner">
+                <!-- Слайды создаются с помощью контейнера с классом item, внутри которого помещается содержимое слайда -->
+                <div class="active item">
+                  <div class="row">
+                    <div class="col-md-5">
+                      <img src="img/object/1.jpg" width="480" height="400" alt="XL">
+                    </div>
+                    <div class="col-md-7">
+                      <h3>XL</h3>
+                      <p>Ямашева 97</p>
+                      <div class="map_object">
+                       <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=ldfpShS3lVZMd40tQ2PN-upnNzbq1hP9&amp;width=600&amp;height=290&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Слайд №2 -->
+                <div class="item">
+                  <div class="row">
+                    <div class="col-md-5">
+                      <img src="img/object/2.jpg" width="480" height="400" alt="XL">
+                    </div>
+                    <div class="col-md-7">
+                      <h3>Suvar Plaza</h3>
+                      <p>Спартаковская 6</p>
+                      <div class="map_object">
+                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=0-QC4XCwU8pxo8d0BTqfbXBLwU2M15i0&amp;width=630&amp;height=290&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Слайд №3 -->
+                <div class="item">
+                  <div class="row">
+                    <div class="col-md-5">
+                      <img src="img/object/3.jpg" width="480" height="400" alt="XL">
+                    </div>
+                    <div class="col-md-7">
+                      <h3>Сити Центр</h3>
+                      <p>Академика Парина 3</p>
+                      <div class="map_object">
+                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=sgtABBH8TsxIFPYHhOQUT5I90Xd_jccG&amp;width=630&amp;height=290&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Слайд №4 -->
+                <div class="item">
+                  <div class="row">
+                    <div class="col-md-5">
+                      <img src="img/object/4.jpg" width="480" height="400" alt="XL">
+                    </div>
+                    <div class="col-md-7">
+                      <h3>Колходный рынок</h3>
+                      <p>Мартына Межлаука 13</p>
+                      <div class="map_object">
+                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=Byjn5UVjOnLwzKCCZFrip0stGz90fB6c&amp;width=630&amp;height=290&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Слайд №5 -->
+                <div class="item">
+                  <div class="row">
+                    <div class="col-md-5">
+                      <img src="img/object/5.jpg" width="480" height="400" alt="XL">
+                    </div>
+                    <div class="col-md-7">
+                      <h3>Отель Ривьера</h3>
+                      <p>Проспект Фатыха Амирхана 1А</p>
+                      <div class="map_object">
+                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=gyswwaFwr2fryoWX7fO063N-lxHDPFtr&amp;width=630&amp;height=290&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Слайд №6 -->
+                <div class="item">
+                  <div class="row">
+                    <div class="col-md-5">
+                      <img src="img/object/6.jpg" width="480" height="400" alt="XL">
+                    </div>
+                    <div class="col-md-7">
+                      <h3>РК Ривьера</h3>
+                      <p>Проспект Фатыха Амирхана 1Б</p>
+                      <div class="map_object">
+                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=X6F0V6IpTBQFM3mddhFdKrR-vpk8k9v7&amp;width=630&amp;height=290&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Слайд №7 -->
+                <div class="item">
+                  <div class="row">
+                    <div class="col-md-5">
+                      <img src="img/object/7.jpg" width="480" height="400" alt="XL">
+                    </div>
+                    <div class="col-md-7">
+                      <h3>Интертерминал</h3>
+                      <p>Набережная 1</p>
+                      <div class="map_object">
+                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=JGJ_6ALxmnb5rh3EvXUI--R65qdPhhDT&amp;width=630&amp;height=290&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
+              <!-- Навигация для карусели -->
+              <!-- Кнопка, осуществляющая переход на предыдущий слайд с помощью атрибута data-slide="prev" -->
+              <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+              </a>
+              <!-- Кнопка, осуществляющая переход на следующий слайд с помощью атрибута data-slide="next" -->
+              <a class="carousel-control right" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+              </a>
             </div>
           </div>
         </div>
       </div>
     </section>
+    <!--Подвал-->
+    <footer id="contacts">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="map_cont">
+              <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=0-QC4XCwU8pxo8d0BTqfbXBLwU2M15i0&amp;width=530&amp;height=290&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <h2>Контакты</h2>
+            <div class="row cont_info">
+                <p class="cont_address">Адрес:</p>
+                <p class="cont_suvar">Казань ул. Спартаковская д 6 Сувар-Плаза</p>
+            </div>
+            <div class="row cont_info">
+              <p class="cont_phone">Телефон:</p>
+              <p>8(843) 526 50 50</p>
+              <p class="cont_email">Email:</p>
+              <p>5265050@bk.ru</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <span class="cont_requisites">ООО "СвязьИнформБюро"</span>
+            <span class="cont_requisites">ОГРН 255233655</span>
+            <span class="cont_requisites">ИНН 55886411525</span>
+          </div>
+          <div class="col-md-4 text-center">
+            <p class="cont_kazan">Казань 2015-2016</p>
+          </div>
+          <div class="col-md-4 text-right">
+            <p class="developer">Разработанно: Alexziz</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Modal -->
         <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
