работа над всплывающими окнами

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div class="col-md-4">
             <div class="main_bottom">
               <div class="connect_bot bot3">
-                <a href="#">Заказать выезд специалиста</a>
+                <button>Заказать выезд специалиста</button>
               </div>
             </div>
           </div>
@@ -156,7 +156,7 @@
       <div class="container"> 
         <div class="row">
           <div class="section_header text-center">
-            <h3>Решения для беспроводной сети <span>ubiquiti</span></h3>
+            <h3>Решения для беспроводной сети - <span>ubiquiti</span></h3>
           </div>
         </div>
         <div class="row text-center">
@@ -204,7 +204,7 @@
       <div class="container">
         <div class="row">
           <div class="section_header text-center">
-            <h3>Услуги доступа и интернет и телефонная связь</h3>
+            <h3>Услуги доступа в интернет и телефонная связь</h3>
           </div>
         </div>
         <div class="row">
@@ -391,12 +391,15 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                
               </div>
               <div class="modal-body">
+
                <div class="row">
-                 
+                <div class="header_modal">
+                  <h3>Для вызов специалиста <br>оставьте свои данные</h3>
+                </div> 
                </div>
+
               </div>
             </div>
           </div>
