Написания файла send.php

--- a/index.html
+++ b/index.html
@@ -399,8 +399,9 @@
                   </div>
                 </div>
                 <div class="row">
-                  <form action="#">
+                  <form action="send.php" method="post">
                     <div class="col-xs-12">
+                      <input type="hidden" name="what" value="Вызов специалиста">
                       <input name="name" type="text" required placeholder="Имя..." class="form-control form_input">
                     </div>
                     <div class="col-xs-12">
@@ -438,8 +439,9 @@
                   </div>
                 </div>
                 <div class="row">
-                  <form action="#">
+                  <form action="send.php" method="post">
                     <div class="col-xs-4">
+                      <input type="hidden" name="what" value="Станция для малого бизнеса">
                       <input name="name" type="text" required placeholder="Имя..." class="form-control form_input">
                     </div>
                     <div class="col-xs-4">
@@ -476,8 +478,9 @@
                   </div>
                 </div>
                 <div class="row">
-                  <form action="#">
+                  <form action="send.php" method="post">
                     <div class="col-xs-4">
+                      <input type="hidden" name="what" value="Станция для среднего бизнеса">
                       <input name="name" type="text" required placeholder="Имя..." class="form-control form_input">
                     </div>
                     <div class="col-xs-4">
@@ -514,8 +517,9 @@
                   </div>
                 </div>
                 <div class="row">
-                  <form action="#">
+                  <form action="send.php" method="post">
                     <div class="col-xs-4">
+                      <input type="hidden" name="what" value="Станция для крупного бизнеса">
                       <input name="name" type="text" required placeholder="Имя..." class="form-control form_input">
                     </div>
                     <div class="col-xs-4">
@@ -552,8 +556,9 @@
                   </div>
                 </div>
                 <div class="row">
-                  <form action="#">
+                  <form action="send.php" method="post">
                     <div class="col-xs-4">
+                      <input type="hidden" name="what" value="телефонные аппараты для бизнеса">
                       <input name="name" type="text" required placeholder="Имя..." class="form-control form_input">
                     </div>
                     <div class="col-xs-4">
@@ -591,8 +596,9 @@
                   </div>
                 </div>
                 <div class="row">
-                  <form action="#">
+                  <form action="sent.php" method="post">
                     <div class="col-xs-4">
+                      <input type="hidden" name="what" value="точки доступа">
                       <input name="name" type="text" required placeholder="Имя..." class="form-control form_input">
                     </div>
                     <div class="col-xs-4">
@@ -629,8 +635,9 @@
                   </div>
                 </div>
                 <div class="row">
-                  <form action="#">
+                  <form action="send.php" method="post"> 
                     <div class="col-xs-4">
+                      <input type="hidden" name="what" value="Активное оборудование">
                       <input name="name" type="text" required placeholder="Имя..." class="form-control form_input">
                     </div>
                     <div class="col-xs-4">
@@ -667,8 +674,9 @@
                   </div>
                 </div>
                 <div class="row">
-                  <form action="#">
+                  <form action="send.php" method="post"> 
                     <div class="col-xs-4">
+                      <input type="hidden" name="what" value="Контроллеры">
                       <input name="name" type="text" required placeholder="Имя..." class="form-control form_input">
                     </div>
                     <div class="col-xs-4">
@@ -705,8 +713,9 @@
                       </div>
                     </div>
                     <div class="row">
-                      <form action="#">
+                      <form action="send.php" method="post"> 
                         <div class="col-xs-4">
+                          <input type="hidden" name="what" value="Антены">
                           <input name="name" type="text" required placeholder="Имя..." class="form-control form_input">
                         </div>
                         <div class="col-xs-4">
