--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <dir id="toTop">наверх</dir>
+    <dir id="toTop">наверх</dir> <!-- Кнопка НАВЕРХ -->
   <body>
   <!--Шапка главной страницы-->
     <header id="hed">
